scrollbar issue fixed

--- a/resources/js/react/UserInterface/Main.css
+++ b/resources/js/react/UserInterface/Main.css
@@ -1154,7 +1154,7 @@ body {
 .apps-modal .modal-content {
     border: 0;
     width: 100%;
-    overflow-y: auto;
+    overflow: hidden;
     border-radius: 1rem;
     max-height: calc(100vh - 180px);
 }
